# lexedata

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .zenodo.json  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  Manual.md  README.md  Wordlist-metadata.json  cellparser.py  cldfbench.sh  copy_cldf-metadata.json  exceptions.py  forms.csv  paper.md  setup.cfg  setup.py  tox.ini
.github/workflows/: python-tox.yml  release_to_pypi.yml
Manual/: Manual.md
docs/: Makefile  Manual.md  bibliography.bib  cldf.md  cli.rst  cli_reference.rst  conf.py  git.rst  glossary.rst  index.md  index.rst  installation.rst  internal_api.rst  lexedata.edit.rst  lexedata.exporter.rst  lexedata.importer.rst  lexedata.report.rst  lexedata.util.rst  paper.md  tour.rst
docs/examples/: bantu.xlsx  cognate.tsv
lexicaldata/database/: TG_cognates_online_MASTER.xlsx  TG_comparative_lexical_online_MASTER.xlsx  cognates.xlsx  lexical.xlsx  out.xlsx  output.xlsx
paper/: bibliography.bib  paper.md
src/importer/: cells.py  exceptions.py
src/lexedata/: __init__.py  (+4 more)
test/: check_all_versions_match.py  cldf_to_cogsetexcel.py  clean_cells.json  database.py  excel_conversion.py  fixtures.py  helper_functions.py  mock_excel.py  test_add_cognate_table.py  test_add_singleton.py  test_additional_import.py  test_additional_importer.py  test_cellparser.py  test_cellparser.xlsx  test_central_concepts_cognatesets.py  test_clis.py  test_cognate_detector.py  test_cognate_exporter.py  test_concept_guesser.py  test_convert_cognateset_excel_view.py  test_coverage.py  test_database.py  test_dataset_issues.py  test_edictor.py  test_excel_conversion.py  test_excel_import.py  test_excel_util.py  test_extended_validate.py  test_form_matcher.py  test_fromexcel_runs.py  test_homophones_merger.py  test_interleaved_importer.py  test_matrix_exporter.py  test_morphemes.py  test_na_forms.py  test_segment.py  test_small_example.py  test_util.py  test_util_simplify_ids.py  test_various_parsers.py  (+1 more)
(+167 files in other folders)
