[metadata]
name = lexedata
version = 1.0.0-alpha1
author = Melvin Steiger, Gereon A. Kaiping
author_email = gereon.kaiping@geo.uzh.ch
description = Tools to edit lexical data in CLDF, and transform it to and from other well-known formats.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/Anaphory/lexedata
project_urls =
    Bug Tracker = https://github.com/Anaphory/lexedata/issues
keywords = data linguistics
license = GNU General Public License v3.0

[options]
package_dir=
    =src
packages=find:

python_requires = >=3.7
install_requires =
    networkx
    clldutils>=3.0.1
    attrs
    python-igraph
    openpyxl
    pycldf
    sqlalchemy
    segments
    lingpy
    unidecode
    cldfbench
    pyglottolog
    pyconcepticon
    pyclts>=3.1.0

[options.packages.find]
where=src
