[metadata]
name = lexedata
version = attr: lexedata.__version__
author = Melvin Steiger, Gereon A. Kaiping
author_email = gereon.kaiping@geo.uzh.ch
description = Tools to edit lexical data in CLDF, and transform it to and from other well-known formats.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/Anaphory/lexedata
project_urls =
    Bug Tracker = https://github.com/Anaphory/lexedata/issues
keywords = data linguistics
license = GNU General Public License v3.0

[options]
package_dir=
    =src
packages=find:

python_requires = >=3.8
install_requires =
    networkx>=2.6.0
    clldutils>=3.0.1
    attrs
    python-igraph
    openpyxl
    pycldf>=1.20.2
    sqlalchemy>=1.4
    segments>=2.1.0
    lingpy>=2.6.7
    unidecode
    cldfbench
    pyglottolog
    pyconcepticon
    pyclts>=3.1.0
    lxml
    numpy>=1.20.0
    regex>=2020.6.8
    lxml>=4.6.4

include_package_data = True

[options.package_data]
* =
    data/example-bantu.xlsx
    *.gml.zip

[options.packages.find]
where=src
